--- a/infra/common/build.gradle
+++ b/infra/common/build.gradle
@@ -1,16 +1,15 @@
 plugins {
     alias(libs.plugins.android.library)
     alias(libs.plugins.kotlin.android)
-    id('kotlin-kapt')
 }
 
-def androidID = rootProject.ext.androidID
 android {
-    namespace 'com.zhang.user'
+    namespace 'com.zhang.common'
     compileSdk androidID.compileSdk
 
     defaultConfig {
         minSdk androidID.minSdk
+
         consumerProguardFiles "consumer-rules.pro"
     }
 
@@ -28,13 +27,12 @@ android {
         jvmTarget = '17'
     }
 }
-kapt {
-    arguments {
-        arg("AROUTER_MODULE_NAME", project.name)
-    }
-}
+
 dependencies {
-    api(project(":infra:common"))
-    api(project(":infra:router_center"))
-    kapt dependenciseID['arouter-compiler']
+    api libs.androidx.core.ktx
+    api libs.androidx.appcompat
+    api libs.androidx.constraintlayout
+    api libs.material
+    api libs.androidx.activity
+    api(project(':deps:service'))
 }
