--- a/news/build.gradle
+++ b/news/build.gradle
@@ -1,35 +1,23 @@
 plugins {
-    alias(libs.plugins.android.application)
+    alias(libs.plugins.android.library)
     alias(libs.plugins.kotlin.android)
-    id 'kotlin-kapt'
+    id("kotlin-kapt")
 }
 
-def androidID = rootProject.ext.androidID
-
 android {
-    namespace 'com.zhang.reader'
+    namespace 'com.zhang.news'
     compileSdk androidID.compileSdk
 
     defaultConfig {
-        applicationId appID.appId
         minSdk androidID.minSdk
-        targetSdk androidID.targetSdk
-        versionCode androidID.versionCode
-        versionName androidID.versionName
-
-
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        consumerProguardFiles "consumer-rules.pro"
     }
-    buildFeatures {
-        buildConfig true
-    }
+
     buildTypes {
         release {
-
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-        debug {
-            rootProject.ext.isRelease = false
         }
     }
     compileOptions {
@@ -46,9 +34,7 @@ kapt {
     }
 }
 dependencies {
-    implementation project(":user")
-    implementation project(":post")
-    implementation project(":infra:common")
+    api(project(":infra:common"))
     api(project(":infra:router_center"))
     kapt dependenciseID['arouter-compiler']
 }
