network模块还需修改

--- a/infra/common/build.gradle
+++ b/infra/common/build.gradle
@@ -36,4 +36,5 @@ dependencies {
     api libs.androidx.activity
     api(project(':deps:service'))
     api(project(':infra:log'))
+    api(project(':infra:network'))
 }
