--- a/infra/network/build.gradle
+++ b/infra/network/build.gradle
@@ -1,16 +1,16 @@
 plugins {
     alias(libs.plugins.android.library)
     alias(libs.plugins.kotlin.android)
+    id('kotlin-kapt')
 }
 
 android {
-    namespace 'com.zhang.network'
+    namespace 'com.quick.network'
     compileSdk 35
 
     defaultConfig {
         minSdk 24
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
     }
 
@@ -34,11 +34,10 @@ dependencies {
     implementation libs.androidx.core.ktx
     implementation libs.androidx.appcompat
     implementation libs.material
-    implementation(project(':infra:log'))
-
-//    implementation project(':infra:platform')
-    implementation project(':infra:common')
-//    implementation project(':infra:monitor')
-//    implementation project(':infra:storage')
-    implementation 'com.squareup.okhttp3:logging-interceptor:4.12.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    api "com.squareup.retrofit2:converter-moshi:2.9.0"
+    api("com.squareup.moshi:moshi-kotlin:1.15.2")
+    kapt "com.squareup.moshi:moshi-kotlin-codegen:1.15.2"
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.1'
+    api 'androidx.preference:preference-ktx:1.1.1'
 }
